torziel hinzugefügt , CSS Anpassungen etc

--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ main {
     margin: 0 auto;
     max-width: 500px;
     padding: 10px;
+    text-align: center;
+    border: 1px solid #333;
 }
 
 .button-main {
@@ -80,12 +82,12 @@ main {
     padding: 10px;
 }
 
-
-
 table {
-    width: 100%;
     border-collapse: collapse;
-    margin: 10px auto;
+    white-space: nowrap;
+    margin: auto;
+    text-align: center;
+    overflow-x: auto;
 }
 th {
     background-color: #333;
@@ -98,9 +100,6 @@ td {
     text-align: center;
 }
 
-
-
-
 .tel_ausgabe {
     color: green;
     font-weight: bold;
@@ -108,4 +107,15 @@ td {
     margin: 10px auto;
     text-align: center;
 }
+
+#ziel , #torziel {
+    text-align: center;
+    max-width: 60px;
+}
+
+.table-container {
+    overflow-x: auto;
+    margin: 10px auto;
+}
+
 
